hard-gists/74e556cd8a7814a5270079f94950957f/run.log
=== Docker Run Log for 74e556cd8a7814a5270079f94950957f ===
Started at: Mi 29. Okt 17:10:33 CET 2025

[2025-10-29 17:10:34] START: Running container for 74e556cd8a7814a5270079f94950957f
[2025-10-29 17:10:34] SUCCESS: Container 44f19dfae2ec51b3083ec8e05f048c1f7e813cd4ee06a5e0ea25021f033a77d8 started for 74e556cd8a7814a5270079f94950957f
=== Container logs for 74e556cd8a7814a5270079f94950957f ===
  File "/snippet.py", line 67
    print "Address:", addr
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 74e556cd8a7814a5270079f94950957f ===
[2025-10-29 17:10:36] INFO: Container 44f19dfae2ec51b3083ec8e05f048c1f7e813cd4ee06a5e0ea25021f033a77d8 has stopped
